<resources>
    <string name="app_name">GameDealsNew</string>
    <string name="thumbnail_desc">Game Thumbnail</string>
    <string name="homeactivity">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_setting">Setting</string>
    <string name="retry">Coba lagi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_placeholder">Example Text</string>
    <string name="loading_image">loading image</string>
    <string name="home_header_text">Today\'s Deals</string>
    <string name="filter_button">filter button</string>
    <string name="game_store_icon">game store icon</string>
    <string name="store_icon_template">"https://www.cheapshark.com/img/stores/icons/%1$s.png"</string>
    <string name="store_banner_template">"https://www.cheapshark.com/img/stores/banners/%1$s.png"</string>
    <string name="store_logo_template">"https://www.cheapshark.com/img/stores/logos/%1$s.png"</string>
    <string name="game_title_input_hint">Put your game name here</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="start_end_price">$0.0 - $0.0</string>
    <string name="sort_title_text">Sort By</string>
    <string name="price_range_title_text">Price Range</string>
    <string name="game_stores_title_text">Game Stores</string>
    <string name="price_range_value">$%1$s - $%2$s</string>
    <string name="price_template">$%1$s</string>
    <string name="cheapshark_base_url">https://www.cheapshark.com%1$s</string>
    <string name="game_thumbnail">game thumbnail</string>
    <string name="back_button">back button</string>
    <string name="back_button_text">Back</string>
    <string name="buy">Buy</string>
    <string name="deal_detail_other_deals_title">Other deals</string>
    <string name="game_search_hint">Find your games here</string>
    <string name="deals_list">Deals List</string>
    <string-array name="sort_by">
        <item>DealRating</item>
        <item>Title</item>
        <item>Savings</item>
        <item>Price</item>
        <item>Metacritic</item>
        <item>Reviews</item>
        <item>Release</item>
        <item>Store</item>
        <item>Recent</item>
    </string-array>
</resources>