<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.deal_detail.DealDetailActivity">

    <ImageView
        android:id="@+id/game_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/game_thumbnail"
        android:src="@drawable/cheapshark_logo"
        />
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:drawableLeft="@drawable/arrow_back_24"
        android:text="@string/back_button_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/game_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/game_price"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:alpha="0.5"
            tools:text="$$$$"
            />
        <TextView
            android:id="@+id/game_discount"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/game_price"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="$$$$"
            />
        <Button
            android:id="@+id/buy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_toEndOf="@id/game_price"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/buy"
            android:textSize="32sp"
            />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>